// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day 5 - Part 2 should draw all lines of the example 1`] = `
"1 0 1 0 0 0 0 1 1 0
0 1 1 1 0 0 0 2 0 0
0 0 2 0 1 0 1 1 1 0
0 0 0 1 0 2 0 2 0 0
0 1 1 2 3 1 3 2 1 1
0 0 0 1 0 2 0 0 0 0
0 0 1 0 0 0 1 0 0 0
0 1 0 0 0 0 0 1 0 0
1 0 0 0 0 0 0 0 1 0
2 2 2 1 1 1 0 0 0 0
"
`;

exports[`Day 5 - Part 2 should draw diagonal line 1`] = `
"0 0 0 0 0 0 0 0 0 0
0 1 0 0 0 0 0 0 0 0
0 0 1 0 0 0 0 0 0 0
0 0 0 1 0 0 0 0 0 0
0 0 0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0 0 0
"
`;

exports[`Day 5 - Part 2 should draw diagonal line 2`] = `
"0 0 0 0 0 0 0 0 0 0
0 1 0 0 0 0 0 0 0 0
0 0 1 0 0 0 0 0 0 0
0 0 0 1 0 0 0 0 0 0
0 0 0 0 0 0 0 0 0 0
0 0 0 0 0 0 1 0 0 0
0 0 0 0 0 0 0 1 0 0
0 0 0 0 0 0 0 0 1 0
0 0 0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0 0 0
"
`;

exports[`Day 5 - Part 2 should draw diagonal line 3`] = `
"0 0 0 0 0 0 0 0 0 0
0 1 0 0 0 0 0 0 0 0
0 0 1 0 0 0 0 0 0 0
0 0 0 1 0 0 0 0 0 0
0 0 0 0 0 0 0 0 0 0
0 0 0 0 0 0 1 0 0 0
0 0 0 0 0 0 0 1 0 0
0 0 0 0 0 0 0 0 1 0
0 1 0 0 0 0 0 0 0 0
1 0 0 0 0 0 0 0 0 0
"
`;
